# rust-study

scrape-batch/: Cargo.toml
scrape-batch/src/: main.rs  scrapePattern.rs
suumo_analyze/: .env  Cargo.toml
suumo_analyze/src/: main.rs  schema.rs
