[package]
name = "scrape-batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
scraper = "*"
reqwest = { version="*",features = ["blocking"] }
easy-scraper = "*"
# easy-scraper = { git = "https://github.com/tanakh/easy-scraper", branch = "master" }